--- a/LocalizedStringTest/Resource/Localizable/en.lproj/Localizable.strings
+++ b/LocalizedStringTest/Resource/Localizable/en.lproj/Localizable.strings
@@ -7,10 +7,10 @@
 */
 
 // User Page
-"user_page_title" = "%@'s Profile";
-"user_page_number_of_followers" = "You have %02d followers and you follow %02d people";
-"user_page_settinge" = "Settings";
-"user_page_edit_profile" = "Edit profile";
+"profile_page_title" = "%@'s Profile";
+"profile_page_number_of_followers" = "You have %02d followers and you follow %02d people";
+"profile_page_settinge" = "Settings";
+"profile_page_edit_profile" = "Edit profile";
 
 // Settings Page
 "settings_page_title" = "Settings";
